--- a/CMC-Details.html
+++ b/CMC-Details.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="container" data-aos="fade-up">
-        <h1>China Railway Construction Corporation Ltd. - Document Controller</h1>
+        <h1>Continental Mercantile Corporation. - Document Controller</h1>
         <p><strong>Dates:</strong> August 2021 - November 2022</p>
         <p><strong>Location:</strong> Cochin, India</p>
 	</p>
