--- a/Baytur.html
+++ b/Baytur.html
@@ -77,6 +77,7 @@
         <h1>Baytur Insaat Taahhut - Document Controller</h1>
         <p><strong>Dates:</strong> December 2008 - June 2012</p>
         <p><strong>Location:</strong> Doha, Qatar</p>
+	<p><strong>Project Details:</strong> Qatar National Convention Centre is one of the most iconic and sustainable convention centers in the Middle East. Designed by renowned Japanese architect Arata Isozaki, the structure features a striking façade inspired by the Sidra tree, symbolizing knowledge and nourishment. The facility includes a 4,000-seat conference hall, a 2,300-seat theatre, and nine exhibition halls offering a total of 40,000 square meters of exhibition space. Built to the highest environmental standards, QNCC was one of the first convention centers in the world to be built to LEED Gold certification standards, incorporating energy-efficient systems and sustainable design elements.</p>
 	</p>
 
         <h2>Responsibilities & Achievements:</h2>
