--- a/Kamlesh-Plastics.html
+++ b/Kamlesh-Plastics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kishor Sankaran - kamlesh Plastics Details</title>
+    <title>Kishor Sankaran - Kamlesh Plastics Details</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         body {
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="container" data-aos="fade-up">
-        <h1>Baytur Insaat Taahhut - Administrative Executive</h1>
+        <h1>Kamlesh Plastics - Administrative Executive</h1>
         <p><strong>Dates:</strong> February 2004 - July 2008</p>
         <p><strong>Location:</strong> Mumbai, India</p>
 	 <p><strong>Project Details:</strong> Qatar National Convention Centre is one of the most iconic and sustainable convention centers in the Middle East. Designed by renowned Japanese architect Arata Isozaki, the structure features a striking façade inspired by the Sidra tree, symbolizing knowledge and nourishment. The facility includes a 4,000-seat conference hall, a 2,300-seat theatre, and nine exhibition halls offering a total of 40,000 square meters of exhibition space. Built to the highest environmental standards, QNCC was one of the first convention centers in the world to be built to LEED Gold certification standards, incorporating energy-efficient systems and sustainable design elements.</p>
