--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 </a>
 
                 <!-- KEO International Consultants -->
-                <a href="KEO-Details.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="300">
+                <a href="KEO%20Details.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="300">
                     <div class="work-experience-box">
                         <p>2023</p>
                         <p>Document Controller</p>
@@ -685,7 +685,7 @@
                 </a>
 
                 <!-- Kamlesh Plastics -->
-                <a href="kamlesh-plastics-details.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="800">
+                <a href="Kamlesh-Plastics.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="800">
                     <div class="work-experience-box">
                         <p>2004-2008</p>
                         <p>Administrative Executive</p>
@@ -695,7 +695,7 @@
                 </a>
 
                 <!-- A&B Toolers -->
-                <a href="ab-toolers-details.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="900">
+                <a href="A&B%20Toolers.html" target="_blank" class="work-experience-box-link" data-aos="fade-up" data-aos-delay="900">
                     <div class="work-experience-box">
                         <p>2002-2003</p>
                         <p>Administrative Executive</p>
