--- a/index.html
+++ b/index.html
@@ -964,12 +964,14 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Managed and streamlined the handover documentation process for large-scale water and wastewater projects, ensuring compliance with client specifications and regulatory requirements.</li>
-            <li>Developed and implemented a robust system for tracking, reviewing, and approving final project documentation, leading to a X% reduction in handover delays.</li>
-            <li>Collaborated closely with engineering, construction, and commissioning teams to compile comprehensive O&M manuals, as-built drawings, and final certificates.</li>
-            <li>Utilized advanced document management software (e.g., Aconex, client-specific platforms) to maintain accurate document registers and audit trails.</li>
-            <li>Provided training and support to project staff on document control procedures and the use of the handover documentation system.</li>
+             <li>Prepared and submitted handover documents for Project Completion Certificate (PCC), DC clearance, and Final Completion Certificate (FCC).</li>
+            <li>Managed getting DC clearance by submitting deliverables on time through Ashghal's Project Document Lifecycle Management (PDLM) system.</li>
+            <li>Developed Operation & Maintenance (O&M) Manuals. These manuals detail equipment procedures, maintenance schedules, and safety protocols for system operation.</li>
+            <li>Ensured all submissions met Ashghal's standards and guidelines.</li>
+            <li>Supported and guided team members on preparing and submitting project documentation.</li>
             <li>Successfully coordinated with various stakeholders, including clients, consultants, and subcontractors, to ensure timely submission and acceptance of all handover deliverables.</li>
+            <li>Attended weekly handover meetings with the client and supervision consultant to discuss close-out document status.</li>
+            <li>Gathered closeout details from the team, updated the Snag List across different areas, and prepared weekly reports and an overall snag summary.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -982,11 +984,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Managed document control for various projects, ensuring adherence to company and client standards.</li>
-            <li>Maintained up-to-date document registers and provided timely access to project documentation for teams.</li>
-            <li>Assisted in the preparation and submission of project deliverables, including reports, drawings, and correspondence.</li>
-            <li>Ensured proper version control and archiving of all project-related documents.</li>
-            <li>Facilitated efficient communication and information flow between project teams and external stakeholders.</li>
+           <li>Receive Technical Documents, Letters, RFIs and other documents from the Contractor</li>
+            <li>Record all Incoming and Outgoing Documents in the system</li>
+            <li>Forward documents to the Client team for their review and approval</li>
+            <li>Ensured all submissions met Company's standards and guidelines.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -999,11 +1000,11 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Implemented and maintained document control systems for large-scale infrastructure projects.</li>
-            <li>Managed the lifecycle of project documents from initiation to archiving, ensuring accuracy and accessibility.</li>
-            <li>Coordinated with various departments to standardize document submission and retrieval processes.</li>
-            <li>Conducted regular audits to ensure compliance with document control procedures and project requirements.</li>
-            <li>Provided support and training to staff on document management best practices and system usage.</li>
+            <li>fficiently managed project documentation using the Aconex platform.</li>
+            <li>Maintained a comprehensive Master Filing System for secure storage of technical documents.</li>
+            <li>Ensured accurate document structure and data integrity to support clear client communication.</li>
+            <li>Proficiently uploaded and organized data on the Client's APMS.</li>
+            <li>Implemented seamless internal workflows through Aconex to enhance efficiency.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1016,11 +1017,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Managed incoming and outgoing project documentation, ensuring proper logging and distribution.</li>
-            <li>Maintained comprehensive document registers and controlled access permissions.</li>
-            <li>Supported project teams in document retrieval and organization.</li>
-            <li>Ensured adherence to project-specific document control procedures.</li>
-            <li>Assisted in the preparation of project reports and presentations.</li>
+           <li>Carefully oversaw the recording, verification, and monitoring of incoming and outgoing documents to ensure accuracy and compliance.</li>
+            <li>Facilitated efficient dissemination of documents across departments and branches to support smooth collaboration.</li>
+            <li>Diligently managed comprehensive document logs, including correspondence and resumes, ensuring organized and accessible record-keeping.</li>
+            <li>Maintained thorough records of interviews and new hires, contributing to streamlined and effective HR processes.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1033,11 +1033,11 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Managed the full lifecycle of project documents, including processing, distribution, and archiving.</li>
-            <li>Implemented and maintained document control systems to ensure efficient information flow.</li>
-            <li>Ensured compliance with client-specific document management requirements and project standards.</li>
-            <li>Trained new team members on document control procedures and system usage.</li>
-            <li>Prepared and submitted various document control reports for project management.</li>
+            <li>Accountable for accurate and organized document control in alignment with established company procedures across multiple projects, including the Expressway and LRDP.</li>
+            <li>Uploaded technical documents and correspondences to the EDMS.</li>
+            <li>Handled document distribution, maintained electronic folders and directories, and ensured proper tracking and retrieval of documents and drawings.</li>
+            <li>Delivered document control training sessions for new employees.</li>
+            <li>Developed document filing structures and necessary forms for new projects.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1050,11 +1050,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Responsible for all aspects of document control for large construction projects.</li>
-            <li>Managed the receipt, registration, distribution, and archiving of project documents.</li>
-            <li>Ensured strict adherence to document control procedures and quality standards.</li>
-            <li>Liaised with project managers, engineers, and external parties regarding documentation.</li>
-            <li>Maintained accurate and up-to-date document tracking systems.</li>
+             <li>Effectively established comprehensive registers for tracking all incoming and outgoing communications, including letters and faxes.</li>
+            <li>Demonstrated expertise in handling project-specific technical documents such as Drawings, Material Submittals, RFIs, RFITs, MDS, NCRs, SDRs, and others.</li>
+            <li>Managed both physical and digital copies to ensure efficient storage, easy retrieval, proper archiving, and accurate indexing.</li>
+            <li>Supported smooth document control and project coordination through organized and accessible documentation systems.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1067,11 +1066,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Managed general administrative tasks, including record keeping and office organization.</li>
-            <li>Handled correspondence, scheduling, and office supplies management.</li>
-            <li>Supported management in various day-to-day operational activities.</li>
-            <li>Ensured efficient office procedures and a smooth working environment.</li>
-            <li>Assisted with data entry and basic reporting.</li>
+            <li>Directly assisted the Managing Director and Operations Manager, contributing to decision-making and operational efficiency.</li>
+            <li>Supervised staff effectively by creating optimal work schedules and delegating tasks appropriately.</li>
+            <li>Organized and facilitated meetings, coordinated appointments, and maintained office calendars.</li>
+            <li>Managed office supply inventories to ensure smooth and uninterrupted office operations.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1084,11 +1082,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Provided administrative support to the team, including document management and filing.</li>
-            <li>Managed incoming and outgoing communications.</li>
-            <li>Organized and maintained office records and databases.</li>
-            <li>Assisted in various operational tasks as required.</li>
-            <li>Contributed to maintaining an organized and efficient office environment.</li>
+            <li>Performed a variety of administrative tasks, including organizing and managing files, handling incoming calls, and managing routine correspondence.</li>
+            <li>Processed financial transactions by collecting and depositing funds, and efficiently handled bill disbursements.</li>
+            <li>Excelled in clerical and secretarial duties such as typing, drafting letters, preparing minutes and agendas, and maintaining organized filing systems.</li>
+            <li>Utilized computer systems and software proficiently to support daily office operations.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
